# drug-disease-compare

./: .gitignore  README.md  justfile  observablehq.config.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy.yml
data/: MANIFEST.yaml
experiments/: README.md  drug_collapse.py  fp_audit_report.py  fp_audit_sample.py  review_groups.py
pipeline/drug_edge_compare/: __init__.py  cli.py  compare.py  drug_groups.py  load.py  mondo.py  nodenorm.py  reconcile.py
pipeline/tests/: test_compare.py  test_load.py
src/: contraindications.md  deconflation.md  diff.md  disease.md  diseases.md  dismech.md  drug.md  drugs.md  error-taxonomy.md  index.md  methods.md  offlabel.md  redundancy.md
src/components/: sources.js
src/data/: agree.json  by_disease.json  by_drug.json  contraindications.json  dakp_offlabel_top_drugs.json  dakp_onlabel_only.json  deconflation.json  disease_areas.json  fp_audit.json  medic_evidence.parquet  medic_only.json  pairs.parquet  redundancy.json  related.json  summary.json
