[project]
name = "drug-edge-compare"
version = "0.1.0"
description = "Hierarchy-aware comparison of MEDIC vs Drug Approvals KP drug->disease edges, reconciled MONDO-centrically via SRI Node Normalizer cliques"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
drug-edge-compare = "drug_edge_compare.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline/drug_edge_compare"]

[tool.ruff]
line-length = 100
src = ["pipeline"]
