[project]
name = "drug-disease-compare"
version = "0.1.0"
description = "Hierarchy- and scope-aware comparison of LLM-mined drug->disease edges across sources (MEDIC, Drug Approvals KP, dismech), reconciled MONDO-centrically via SRI Node Normalizer cliques"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=16.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
drug-disease-compare = "drug_edge_compare.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline/drug_edge_compare"]

[tool.ruff]
line-length = 100
src = ["pipeline"]
